# signedDigitToBinary

./: .clang-tidy  CMakeLists.txt  README.md  functionFile.cpp  functionFile.h  main.cpp
